--- a/time.html
+++ b/time.html
@@ -134,13 +134,12 @@
 							</div>
 							<div class="subscribe wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="3s">
 								<div class="row">
-									<div class="title">
+									<div class="col-sm-12 features wow fadeIn title">
 										<p>这句诗词来自<strong id="pTitle"></strong>,作者是<strong id=author></strong>,全文如下：</p><br />
 										<p id="mian"></p>
 										<div style="height: 30px;"></div>
 										<strong id="tranInfo">诗词大意：</strong><br />
 										<p id="translate"></p>
-
 									</div>
 								</div>
 							</div>
