--- a/time.html
+++ b/time.html
@@ -135,9 +135,9 @@
 							<div class="subscribe wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="3s">
 								<div class="row">
 									<div class="col-sm-12 features wow fadeIn title">
-										<p>这句诗词来自<strong id="pTitle"></strong>,作者是<strong id=author></strong>,全文如下：</p><br />
+										<p>这句诗词来自<strong id="pTitle">增广贤文</strong>,作者是<strong id=author>【明代】佚名</strong>,全文如下：</p><br />
 										<p id="mian"></p>
-										<div style="height: 30px;"></div>
+										<div style="height: 30px;">一寸光阴一寸金，寸金难买寸光阴。</div>
 										<strong id="tranInfo">诗词大意：</strong><br />
 										<p id="translate"></p>
 									</div>
