--- a/time.html
+++ b/time.html
@@ -136,8 +136,8 @@
 								<div class="row">
 									<div class="col-sm-12 features wow fadeIn title">
 										<p>这句诗词来自<strong id="pTitle">增广贤文</strong>,作者是<strong id=author>【明代】佚名</strong>,全文如下：</p><br />
-										<p id="mian"></p>
-										<div style="height: 30px;">一寸光阴一寸金，寸金难买寸光阴。</div>
+										<p id="mian">一寸光阴一寸金，寸金难买寸光阴。</p>
+										<div style="height: 30px;"></div>
 										<strong id="tranInfo">诗词大意：</strong><br />
 										<p id="translate"></p>
 									</div>
