增加入口链接

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 					<div class="row">
 						<div class="col-sm-12 text">
 							<h1 class="wow fadeInLeftBig" data-wow-duration="1.5s" data-wow-delay="1s">
-								<strong id="hitokoto">一寸光阴一寸金，寸金难买寸光阴</strong>
+								<a href="/time.html"><strong id="hitokoto">一寸光阴一寸金，寸金难买寸光阴</strong></a>
 							</h1>
 							<div class="timer wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="2.5s">
 								<div class="years-wrapper">
@@ -133,10 +133,10 @@
 							</div>
 							<div class="subscribe wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="3s">
 								<div class="row">
-									<div class="col-sm-12 features wow fadeIn title">
+									<div class="col-sm-12 features wow fadeIn title" data-wow-duration="1.5s" data-wow-delay="4s">
 										<p><strong>贤柳阁</strong> 和 <strong>罗先生</strong> 迁移到新的域名上，已经过去了：<br />
 											<strong>XianliuGe</strong> and <strong>Mr.Luo</strong> are working on the new domain name for: </p>
-										<div class="countdown wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="4s">
+										<div class="countdown wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="5s">
 											<div class="years-wrapper">
 												<span class="years"></span> <span class="t-text">years /</span>
 											</div>
