--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 					<div class="row">
 						<div class="col-sm-12 text">
 							<h1 class="wow fadeInLeftBig" data-wow-duration="1.5s" data-wow-delay="1s">
-								<a href="/time.html"><strong id="hitokoto">一寸光阴一寸金，寸金难买寸光阴</strong></a>
+								<strong id="hitokoto">一寸光阴一寸金，寸金难买寸光阴</strong>
 							</h1>
 							<div class="timer wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="2.5s">
 								<div class="years-wrapper">
@@ -223,6 +223,7 @@
 					<div class="col-sm-12 footer-copyright">
 						<!-- The time of the show is Beijing time. --> &copy; <span id="copyyear"></span>
 						<a href="https://luov.top" title="Mr.Luo">LuoV</a>, All rights reserved.
+						<span><a href="/time.html">Only times</a></span>
 						<span> <a href="/001.html">Last version.</span></a>
 						<br/>
 						<!-- <span style="font-size:80%;">赣ICP备<a
