--- a/index.html
+++ b/index.html
@@ -223,8 +223,8 @@
 					<div class="col-sm-12 footer-copyright">
 						<!-- The time of the show is Beijing time. --> &copy; <span id="copyyear"></span>
 						<a href="https://luov.top" title="Mr.Luo">LuoV</a>, All rights reserved.
-						<span><a href="/time.html">Only times</a></span>
-						<span> <a href="/001.html">Last version.</span></a>
+						<span><a href="/time.html">Only times. </a></span>
+						<span><a href="/001.html">Last version.</span></a>
 						<br/>
 						<!-- <span style="font-size:80%;">赣ICP备<a
 							 href="http://beian.miit.gov.cn/">18012283</a>号&nbsp;
